# rust_tcp_server

./: .env  .gitignore  docker-compose.yml  dockerfile
.github/workflows/: rust_format.yml
css_constant/: Cargo.toml
css_constant/src/: lib.rs
css_parts/: Cargo.toml
css_parts/src/: lib.rs
css_parts/src/monochrome_title_css/: lib.rs
css_parts/src/monochrome_vertical_table_css/: lib.rs
html_constant/: Cargo.toml
html_constant/src/: lib.rs
html_parts/article_base/: Cargo.toml
html_parts/article_base/src/: lib.rs
html_parts/table_base/: Cargo.toml
html_parts/table_base/src/: lib.rs
html_parts/table_base/src/diagonal_table/: lib.rs
html_parts/table_base/src/horizontal_table/: lib.rs
html_parts/table_base/src/vertical_table/: lib.rs
html_parts/title_base/: Cargo.toml
html_parts/title_base/src/: lib.rs
html_parts/title_base/src/basic_title/: lib.rs
html_tags/: Cargo.toml
html_tags/src/: css_type.rs  html.rs  html_type.rs  lib.rs
html_tags/src/css_type/: css_a.rs  css_b.rs  css_c.rs
html_tags/src/html_type/: body.rs  global.rs  html.rs  li.rs  meta.rs  ol.rs  td.rs  th.rs
http_status/: Cargo.toml
http_status/src/: lib.rs
tcp_server/: Cargo.toml
tcp_server/src/: constant.rs  lib.rs  main.rs  server.rs
tcp_server/src/constant/: article_base.rs  const_tags.rs  vertical_table.rs
tcp_server/src/html_tags/: html.rs
tcp_server/src/server/: thread_pool.rs
tcp_server/src/server/thread_pool/: worker.rs
tcp_server/src/server/thread_pool/worker/: job.rs
tcp_server/src/server/thread_pool/worker/job/: fnbox.rs
