[package]
name = "tcp_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
html_tags = { path = "../html_tags"}
article_base = { path = "../html_parts/article_base"}
table_base = { path = "../html_parts/table_base" }